# conan-msvc-linux_gcc-sample

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
